# e211_lib

./: .gitignore  MANIFEST.in  print_version.py  pyproject.toml  setup.cfg  setup.py_old  write_version.py
recipe/: meta.yaml
src/e211_lib/: VERSION  __init__.py  e211.py  get_version.py
