[metadata]
version = file: src/e211_lib/VERSION.txt
license_files = LICENSE
name = 'e211lib'
author = OCESE
author_email = phaustin@eoas.ub.ca
description = e211 libraries
url = https://github.com/phaustin/e211_lib
project_urls =
    Bug Tracker = https://github.com/phaustin/e211_lib/issues
keywords='eoas ubc ocese',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = ==3.8
setup_requires =
    setuptools_scm
[options.packages.find]
where = src